--- a/data/web_server/client/index.html
+++ b/data/web_server/client/index.html
@@ -3,6 +3,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Home Control</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script src="js/jquery-1.11.2.js"></script>
+		<script src="js/socket.io.js"></script>
     </head>
     
     <body>
@@ -25,6 +27,5 @@
         </div>
     </body>
     
-    <script src="js/jquery-1.11.2.js"></script>
     <script src="js/main.js"></script>
 </html>
