tried to get webserver socket.io setup

--- a/data/web_server/client/index.html
+++ b/data/web_server/client/index.html
@@ -24,6 +24,10 @@
                     </ul>
                 </nav>
             </div>
+			<button id="test-button">TEST BUTTON!</button>
+			<video id="videoElement" width="400" controls>
+				<source type="video/mp4">
+			</video>
         </div>
     </body>
     
