Setup audio streaming and added media paths to web_server config

--- a/data/web_server/client/index.html
+++ b/data/web_server/client/index.html
@@ -25,9 +25,8 @@
                 </nav>
             </div>
 			<button id="test-button">TEST BUTTON!</button>
-			<video id="videoElement" width="400" controls>
-				<source type="video/mp4">
-			</video>
+			<video id="videoElement" width="400" controls></video>
+            <audio id="audioElement" controls></audio>
         </div>
     </body>
     
